アニメーション関連の修正

--- a/Assets/UMotionEditor/Manual/ReleaseNotes.html
+++ b/Assets/UMotionEditor/Manual/ReleaseNotes.html
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 		<div class="versionHeader">
-			<p class="versionText">Version: <b>1.28p04</b> </p>
+			<p class="versionText">Version: <b>1.28</b> </p>
 		</div>
 		<div class="leftContent">
 			<div class="leftContentInner">
@@ -249,27 +249,7 @@
         </br>
         </br>The beta version is incremented with every change related to the current beta generation (includes bug fixes, new features or changes to the manual). Beta versions are watermarked as "beta" in the Clip Editor and are not available via the Asset Store.</td>
     </tr>
-</table></br></br><h2 class="headline2" id="">UMotion V1.28p04</h2><h3 class="headline3" id="">New or Changed Features</h3><p class="textBlock">None</p><h3 class="headline3" id="">Bug Fixes</h3><ul class="listMain">
-    <li class="listItem"><span class="listText">Fixed an error message regarding "Arial.ttf" when opening UMotion in Unity 2022.2 alpha.</span></li>
-    <li class="listItem"><span class="listText">Fixed that in Unity 2022.2 alpha a error dialog is shown that states that the FBX dlls can't be found.</span></li>
-    <li class="listItem"><span class="listText">Fixed that the clip tab in the settings window isn't displayed correctly on Linux.</span></li>
-</ul><h3 class="headline3" id="">Manual Changes</h3><p class="textBlock">None</p></br></br><h2 class="headline2" id="">UMotion V1.28p03</h2><h3 class="headline3" id="">New or Changed Features</h3><p class="textBlock">None</p><h3 class="headline3" id="">Bug Fixes</h3><ul class="listMain">
-    <li class="listItem"><span class="listText">Fixed that the IK setup wizard doesn't extrude the IK pole handle's position when the IK chain contains an in-between joint (auxillary joint) that is at the exact same location as the knee/ellbow joint.</span></li>
-    <li class="listItem"><span class="listText">Fixed that the IK solver doesn't bend correctly when the IK chain contains an in-between joint (auxillary joint) that is at the exact same location as the knee/ellbow joint.</span></li>
-</ul><h3 class="headline3" id="">Manual Changes</h3><p class="textBlock">None</p></br></br><h2 class="headline2" id="">UMotion V1.28p02</h2><h3 class="headline3" id="">New or Changed Features</h3><p class="textBlock">None</p><h3 class="headline3" id="">Bug Fixes</h3><ul class="listMain">
-    <li class="listItem"><span class="listText">Fixed that when "Parallel Asset Import" is enabled, the FBX Exporter displays a "Failed to write FBX importer clip settings! Please contact support." error.</span></li>
-    <li class="listItem"><span class="listText">Fixed that in Unity 2021.2 and above, the tool assistant window is clipped at the bottom of the scene view window.</span></li>
-    <li class="listItem"><span class="listText">Fixed that in newer Untiy versions, the text of links turn black once the mouse hovers over them.</span></li>
-    <li class="listItem"><span class="listText">Fixed that decimal separators in floating point input fields are dependent on the current OS culture. The behaviour should now be in-line with how default Unity float fields work.</span></li>
-    <li class="listItem"><span class="listText">Fixed that the error message "The same Component Properties are defined in multiple Custom Property Constraints:" is shown even though there is only one custom property who's bone/transform isn't locked.</span></li>
-    <li class="listItem"><span class="listText">Changed the "No bone/transform selected" text shown in the constraints panel (config mode) to "No bone/transform selected that is part of this rig." to better indicate that something within the current animated character's/object's rig needs to be selected and external objects won't work.</span></li>
-</ul><h3 class="headline3" id="">Manual Changes</h3><ul class="listMain">
-    <li class="listItem"><span class="listText">Updated the child-of constraint chapter to clarified that the child-of constraint can only be assigned to joints/transforms that are within the animated character's/object's hierarchy.</span></li>
-</ul></br></br><h2 class="headline2" id="">UMotion V1.28p01</h2><h3 class="headline3" id="">New or Changed Features</h3><p class="textBlock">None</p><h3 class="headline3" id="">Bug Fixes</h3><ul class="listMain">
-    <li class="listItem"><span class="listText">Fixed that under certain circumstances, exporting multiple *.anim files at once (export --&gt all) caused Unity 2021.2 and above to stall for several minutes.</span></li>
-    <li class="listItem"><span class="listText">Fixed that exporting generic/legacy animations doesn't show a progress bar.</span></li>
-    <li class="listItem"><span class="listText">Fixed that assigning a GameObject that has an inactive parent GameObject doesn't show the "Please activate the GameObject" dialog.</span></li>
-</ul><h3 class="headline3" id="">Manual Changes</h3><p class="textBlock">None</p></br></br><h2 class="headline2" id="">UMotion V1.28</h2><h3 class="headline3" id="">New or Changed Features</h3><ul class="listMain">
+</table></br></br><h2 class="headline2" id="">UMotion V1.28</h2><h3 class="headline3" id="">New or Changed Features</h3><ul class="listMain">
     <li class="listItem"><span class="listText">Added new methods/properties to the UMotion API. It is now possible to add custom menu items to the Clip Editor, add custom buttons to the Pose Editor, to modify the bones/transforms local position, rotation and scale, create key frames and more.</span></li>
 </ul><h3 class="headline3" id="">Bug Fixes</h3><ul class="listMain">
     <li class="listItem"><span class="listText">Fixed an index out of range exception when the root animated game object is assigned to the "Target" field in the IK setup wizard's "Custom IK" section.</span></li>
